- developer controls for ice velocity "look"?
- always collect data for time-based graphs, keep "lastest" & "historical" data points, compress historical, limit historical size
- add zoom in/out button for time-based graphs; show scrolling "latest" data or complete "historical"
- marker flags as first test of motion
- visual representation of snowfall

MEDIUM PRIORITY:
- delete ValleyNode and MountainsNode if they are no longer used
- create a node that encapulates the background image of mountains + valley
- confirm that titles and axes on graphs are as desired
- add view of valley floor with rivers
- add moving debris
- form terminus from debris
- ice textures for above/below EQL, and in/on ice
- morph ice textures to show downvalley motion
- show ice velocity vectors in zoomed view only? they clutter the birds-eye view
- model borehole as a set of moving points, connected via line segments
- repeat mountains and valley at x > 80km
- create convincing mountains, either with an image or with Java2D
- clip equilibrium line to area where it intersects ice (what happens when it doesn't intersect ice?)
- fix layout problems with main control panel
- add pseudo-3D perspective
- adjust magnification of zoomed view?
- adjust aspect ratio?
- remove tools by dragging them back to the trash can (or toolbox?)
- refactor common module functionality into a base class
- redesign advanced climate controls
- constrain tools to dragging in birds-eye bounds
- fancy animation when a tool is dropped in the trash
- add left and right arrows to zoom view, secondary viewport control
- PlayArea.verticallyAlignZoomedViewport makes a change to viewport and results in itself being called again (it works, but not very elegant)
- generalize all charts, there's too much duplicated code (ditto in controller that wires control panel to charts)

LOW PRIORITY:
- offset the temperature range and default, then add the offset back in the model